--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
          <div class="lineCard lineColorCyan"></div>
          <h3 class="nameCard">Supervisor</h3>
          <p class="textCard">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque.</p>
-         <div  alt="" class="logoCard logoSupervisor" ></div>
+         <div class="logoCard logoSupervisor" ></div>
       </div>
       <div class="cardModel cardTeamBuider">
          <div class="lineCard lineColorRed"></div>
          <h3 class="nameCard">Team Builder</h3>
          <p class="textCard">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque.</p>
-         <div  alt="" class="logoCard logoTeamBuilder" ></div>
+         <div  class="logoCard logoTeamBuilder" ></div>
       </div>
       <div class="cardModel cardKarma">
          <div class="lineCard lineColorOrange"></div>
          <h3 class="nameCard">Karma</h3>
          <p class="textCard">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque.</p>
-         <div  alt="" class="logoCard logoKarma" ></div>
+         <div  class="logoCard logoKarma" ></div>
       </div>
       <div class="cardModel cardCalculator">
          <div class="lineCard lineColorBlue"></div>
          <h3 class="nameCard">Calculator</h3>
          <p class="textCard">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque.</p>
-         <div  alt="" class="logoCard logoCalculator" ></div>
+         <div  class="logoCard logoCalculator" ></div>
       </div>
 
 
